--- a/CuttingSystem3mkMobile/CuttingSystem3mkMobile/Pages/DevicesPage.xaml
+++ b/CuttingSystem3mkMobile/CuttingSystem3mkMobile/Pages/DevicesPage.xaml
@@ -16,7 +16,7 @@
             Padding        ="20,10,20,0">
             <controls:CustomEntry
                 Text            ="{Binding SearchText}"
-                Placeholder     ="Search"
+                Placeholder     ="Wyszukaj"
                 PressedColor    ="{StaticResource TextGrayColor}"
                 TextColor       ="{StaticResource TextGrayColor}"
                 InactiveColor   ="{StaticResource TextGrayColor}"
